@@ -124,6 +124,10 @@
           value="1.3.6.1.4.1.9.9.661.1.3.4.1.1.1"/>
   <def name="c3gGsmCurrentCellId"
           value="1.3.6.1.4.1.9.9.661.1.3.2.1.13"/>
+  
+  <!-- CISCO-PORT-QOS-MIB -->
+  <def name="cportQosDropPkts"
+           value="1.3.6.1.4.1.9.9.189.1.3.2.1.7"/>
 </definitions>
 
 <datasources>
@@ -990,6 +994,20 @@
           value="%system-id% %cisco-3g-phyname% Cell ID" />
     </leaf>
   </template>
+
+  <template name="cisco-port-qos-packets">
+    <param name="snmp-object"
+          value="$cportQosDropPkts.%cisco-pqos-entry%"/>
+    <param name="rrd-ds"           value="%cisco-pqos-direction%Drops" />
+    <param name="rrd-create-dstype" value="COUNTER" />
+    <param name="snmp-object-type"  value="COUNTER64" />
+    <param name="data-file"
+             value="%system-id%_pqos_%cisco-pqos-ifnick%.rrd" />
+    <param name="vertical-label"     value="Pps" />
+    <param name="collector-timeoffset-hashstring"
+        value="%system-id%:%cisco-pqos-ifnick%"/>
+  </template>
+
   
 </datasources>
 
